third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/children_messages.rs
use test_crate::*;

children_messages!(one, two, three, four);

fn main() {}
